2003-02-13  Martin Buchholz  <martin@xemacs.org>

	Make XEmacs redisplay 10 times faster.
	If, that is, you're using a slow X connection and MoveOpaque.
	Use compress_exposure = XtExposeCompressMaximal | XtExposeNoRegion.
	Use compress_motion = TRUE.
	* EmacsFrame.c (emacsFrameClassRec): 
	* EmacsShell-sub.c (EMACS_SHELL_CLASS_REC):
	* EmacsManager.c (emacsManagerClassRec):
	* xintrinsicp.h: Make sure XtExposeNoRegion is defined.

2003-02-13  Ben Wing  <ben@xemacs.org>

	* unicode.c (utf_16_detect):
	Don't get snafued w/division-by-zero.

2003-02-12  Ben Wing  <ben@xemacs.org>

	* profile.c:
	* profile.c (create_profile_tables):
	* profile.c (current_profile_function):
	* profile.c (profile_record_consing):
	* profile.c (profile_record_about_to_call):
	* profile.c (profile_record_just_called):
	* profile.c (sigprof_handler):
	* profile.c (Fstart_profiling):
	* profile.c (Fstop_profiling):
	* profile.c (Fclear_profiling_info):
	* profile.c (copy_hash_table_or_blank):
	* profile.c (Fget_profiling_info):
	* profile.c (set_profiling_info_timing_maphash):
	* profile.c (Fset_profiling_info):
	* profile.c (mark_profiling_info_maphash):
	* profile.c (mark_profiling_info):
	* profile.c (vars_of_profile):
	Major reworking.  Keep track of new information -- total
	function timing (includes descendants), GC usage, total GC usage
	(includes descendants).  New functions to be called appropriately
	from eval.c, alloc.c to keep track of this information.  Keep track
	of when we're actually in a function vs. in its profile, for more
	accurate timing counts.  Track profile overhead separately.  Create
	new mechanism for specifying "internal sections" that are tracked
	just like regular Lisp functions and even appear in the backtrace
	if `backtrace-with-internal-sections' is non-nil (t by default
	for error-checking builds).  Add some KKCC information for the
	straight (non-Elisp) hash table used by profile, which contains